--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-svg-sprite": "^1.5.0",
     "gulp-uglify": "^3.0.2",
     "jquery": "^3.6.0",
-    "sass": "^1.49.0"
+    "sass": "^1.49.0",
+    "slick-carousel": "^1.8.1"
   }
 }
